# dbs_foundation_model

./: .gitignore  check_tsne_emb.py  create_slurm_scripts.py  custom_dataset.py  dbs_fmodel.py  get_emb.py  launch_all.sh  paper_figures.py  plot_ts_samples.py  plot_tsne.py  pyproject.toml  read_all_spectra.py  read_gs_files.py  read_gs_res_mac.py  read_tfevents.py  run.sh  runFooof.sh  runFooof_00001.sh  runFooof_0001.sh  runFooof_001.sh  runFooof_01.sh  runFooof_05.sh  runFooof_06.sh  runFooof_07.sh  runFooof_08.sh  runFooof_09.sh  runFooof_1.sh  run_big.sh  run_bigCorr.sh  run_bigg.sh  run_bk.sh  run_dk.sh  run_hour.sh  run_hour_21.sh  run_log.sh  run_logwo.sh  run_lr.sh  run_lr01.sh  run_small.sh  run_smallCorr.sh  (+5 more)
slurm_jobs/: job_0.slurm  job_1.slurm  job_10.slurm  job_100.slurm  job_101.slurm  job_102.slurm  job_103.slurm  job_104.slurm  job_105.slurm  job_106.slurm  job_107.slurm  job_108.slurm  job_109.slurm  job_11.slurm  job_110.slurm  job_111.slurm  job_112.slurm  job_113.slurm  job_114.slurm  job_115.slurm  job_116.slurm  job_117.slurm  job_118.slurm  job_119.slurm  job_12.slurm  job_120.slurm  job_121.slurm  job_122.slurm  job_123.slurm  job_124.slurm  job_125.slurm  job_126.slurm  job_127.slurm  job_128.slurm  job_129.slurm  job_13.slurm  job_130.slurm  job_131.slurm  job_132.slurm  job_133.slurm  (+536 more)
